=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================

** CHANGES ALONG siesta-3.0 branch

------------------------------------------------------------------------
2011-09-11  15:00:00 GMT Alberto Garcia <albertog@icmab.es>   3.1-pl2
Fix minor bug in denchar and obsolete output in domain_decom

* An attempt was made to close an I/O unit that had not
been opened in the spin-unpolarized case in Denchar.
  
  (Thanks to T. Sondon)

* Obsolete debug information was still being written to
unit 23 in domain_decom, including a call to "flush".
  
modified:
  Util/Denchar/Src/rhoofr.f
  Src/domain_decom.F

------------------------------------------------------------------------
2011-09-01  08:35:00 GMT Alberto Garcia <albertog@icmab.es>   3.1-pl1
Fix makefile symbols in Util/STM/ol-stm

The new domain_decomposition symbols and dependencies were missing.

modified:
  Util/STM/ol-stm/Src/Makefile

------------------------------------------------------------------------
2011-08-26  13:15:00 GMT Alberto Garcia <albertog@icmab.es>  siesta-3.1
Siesta-3.1 release

Added release notes
Updated version string
Updated bug reporting guidelines

added:
  Docs/release.notes_3.1
modified:
  Docs/REPORTING_BUGS
  Docs/siesta.tex
  README
  version.info

------------------------------------------------------------------------
2011-08-26  13:05:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-27
Do not count ghost atoms when printing ionic charge

This was purely cosmetic, but misleading: the variable
zvaltot now records only the sum of (pseudo)protons in
non-ghost species.

(+ cosmetic fix in the printing of lmxkb for ghosts
species in .ion files)

modified:
  Src/atomlist.f
  Src/basis_types.f

------------------------------------------------------------------------
2011-08-23  13:55:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-26