@@ -5,6 +5,15 @@
 ** CHANGES ALONG siesta-3.0 branch
 
 ------------------------------------------------------------------------
+2011-10-03  10:10:00 GMT Alberto Garcia <albertog@icmab.es>   3.1-pl3
+Include missing LDFLAGS symbol in some Util makefiles
+
+modified:
+  Util/COOP/Makefile
+  Util/Contrib/APostnikov/Makefile
+  Util/test-xml/makefile
+
+------------------------------------------------------------------------
 2011-09-11  15:00:00 GMT Alberto Garcia <albertog@icmab.es>   3.1-pl2
 Fix minor bug in denchar and obsolete output in domain_decom
 
